--- a/sesion_7_reto_final/reto_final/RMarkdownFINAL.Rmd
+++ b/sesion_7_reto_final/reto_final/RMarkdownFINAL.Rmd
@@ -1,15 +1,14 @@
 ---
-title: "2050_RMarkdown"
+title: "Presente_Markdown"
 author: "Miguel Perez"
-date: "12 de febrero de 2016"
+date: "11 de febrero de 2016"
 output: html_document
 ---
-
-# Modelo para enebrales Futuro 2050
+# Modelo para enebrales Presente
 ## Se generará un mapa a partir de las variables para ver en qué lugares es más adecuado reintroducir enebros
 
 ### Se establece el directorio de trabajo
-directoriotrabajo<-"C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/reto_final/Futuro2050"
+directoriotrabajo<-"C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/reto_final"
 setwd (directoriotrabajo)
 getwd()
 
@@ -32,17 +31,17 @@ library(HH)
 library(tree)
 library(rgdal)
 
-## Se importan las variables necesarias. Este markdown corresponde a las del año 2050. 
+## Se importan las variables necesarias. Primero, las variables de presente.
 #### No he podido añadir la variable de la tendencia de nieve. He guardado el Raster en formato asc. pero no puedo realizar el brick con el resto de variables ya que me indica que la extensión es distinta. Intenté recortarlas con ArcGis convirtiendolas todas en capas vectoriales (no conozco otra manera para hacerlo), pero tenían georeferenciaciones distintas y no podía ajustarlas a la extensión de Sierra Nevada. 
 
-lista_variables <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/futuro_A2/2050",pattern='*.asc', full.names=TRUE)
+lista_variables <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/presente",pattern='*.asc', full.names=TRUE)
 
 ## Con Stack y Brick se juntan las variables en un unico objeto
 
 variables <- brick(stack(lista_variables))
 
 ## Se representan en un formato gráfico las variables predictoras 
-png("C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/reto_final/Futuro2050/resultados/variables.png", width=2000, height=2000, pointsize=20)
+png("C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/reto_final/variables.png", width=2000, height=2000, pointsize=20)
 plot(variables)
 dev.off()
 
@@ -129,10 +128,41 @@ tabla_modelo <-tabla_completa[,c('huella_humana','PA','PV','topo_posic','respues
 m2<-glm(respuesta~., data=tabla_modelo)
 summary(m2)
 
-## Una vez que se obtiene  el modelo matemático, se aplica a las variables del principio (mapas).
+## Una vez que se obtiene  el modelo matemático, se aplica a las variables del principio (del presente).
 p<-predict(variables, m2)
 plot(p)
 
 ## Se genera el mapa en formato .asc
 p_raster<-raster(p)
-writeRaster(p, "modelo_enebrales2050.asc")
+writeRaster(p, "modelo_enebrales.asc")
+
+## Ahora se añaden las variables de futuro.
+lista_variables2020 <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/futuro_A2/2020",pattern='*.asc', full.names=TRUE)
+lista_variables2030 <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/futuro_A2/2030",pattern='*.asc', full.names=TRUE)
+lista_variables2040 <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/futuro_A2/2040",pattern='*.asc', full.names=TRUE)
+lista_variables2050 <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/futuro_A2/2050",pattern='*.asc', full.names=TRUE)
+
+## Con Stack y Brick se juntan cada grupo variables en un único objeto
+variables2020 <- brick(stack(lista_variables2020))
+variables2030 <- brick(stack(lista_variables2030))
+variables2040 <- brick(stack(lista_variables2040))
+variables2050 <- brick(stack(lista_variables2050))
+
+## Ahora, se aplica el modelo a las diferentes variables
+p2020<-predict(variables2020, m2)
+plot(p2020)
+p2030<-predict(variables2030, m2)
+plot(p2030)
+p2040<-predict(variables2040, m2)
+plot(p2040)
+p2050<-predict(variables2050, m2)
+plot(p2050)
+## Se generan los correspondientes mapas en formato .asc
+p_raster20<-raster(p2020)
+writeRaster(p2020, "modelo_enebrales2020.asc")
+p_raster30<-raster(p2030)
+writeRaster(p2030, "modelo_enebrales2030.asc")
+p_raster40<-raster(p2040)
+writeRaster(p2040, "modelo_enebrales2040.asc")
+p_raster50<-raster(p2050)
+writeRaster(p2050, "modelo_enebrales2050.asc")
