--- a/sesion_7_reto_final/reto_final/RMarkdownFINAL.Rmd
+++ b/sesion_7_reto_final/reto_final/RMarkdownFINAL.Rmd
@@ -32,7 +32,7 @@ library(tree)
 library(rgdal)
 
 ## Se importan las variables necesarias. Primero, las variables de presente.
-#### No he podido añadir la variable de la tendencia de nieve. He guardado el Raster en formato asc. pero no puedo realizar el brick con el resto de variables ya que me indica que la extensión es distinta. Intenté recortarlas con ArcGis convirtiendolas todas en capas vectoriales (no conozco otra manera para hacerlo), pero tenían georeferenciaciones distintas y no podía ajustarlas a la extensión de Sierra Nevada. 
+#### No he podido añadir la variable de la tendencia de nieve. He guardado el Raster en formato asc. pero no puedo realizar el brick con el resto de variables ya que me indica que la extensión es distinta. Intenté recortarlas con ArcGis convirtiendolas todas en capas vectoriales (no conozco otra manera para hacerlo), pero tenían georeferenciaciones distintas y no podía ajustarlas a la extensión de Sierra Nevada. Luego intenté aplicar "RESAMPLE" y "EXTENT", pero no conseguí hacerlo correctamente.
 
 lista_variables <- list.files(path="C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/variables/presente",pattern='*.asc', full.names=TRUE)
 
