--- a/sesion_7_reto_final/reto_final/RMarkdownFINAL.Rmd
+++ b/sesion_7_reto_final/reto_final/RMarkdownFINAL.Rmd
@@ -4,8 +4,8 @@ author: "Miguel Perez"
 date: "11 de febrero de 2016"
 output: html_document
 ---
-# Modelo para enebrales Presente
-## Se generará un mapa a partir de las variables para ver en qué lugares es más adecuado reintroducir enebros
+# Modelo para determinar zonas de idoneidad para enebrales en Sierra Nevada.
+## Se generarán una serie de mapas a partir de las variables para ver en qué lugares es más adecuado reintroducir enebros
 
 ### Se establece el directorio de trabajo
 directoriotrabajo<-"C:/Users/Miguel/Documents/EcoinformaticaMaster/ecoinformatica_2015_2016/sesion_7_reto_final/reto_final"
